syntax = "proto3";

package gophertask.gophertaskapi.v1;

option go_package = "gophertask/gophertaskapi/v1";

enum TaskStatus {
  UNKNOWN = 0;
  NEW = 1;
  IN_PROGRESS = 2;
  DONE = 3;
}